Fix spacing in post lists.
Change spacing on blog and announce pages.

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -333,6 +333,10 @@ tbody tr:nth-child(odd) th {
   margin-bottom: 4em;
 }
 
+.post-list {
+  margin-bottom: 2.5em;
+}
+
 /* Blog post or page title */
 .page-title,
 .post-title,
